small fixes about position and z-indexes

--- a/style.css
+++ b/style.css
@@ -244,20 +244,22 @@ body.lock {
     font-weight: bold;
 }
 .header__sublink-button {
+    position: absolute;
     height: 40px;
     width: 40px;
     background-color: var(--main-bg-color);  
     border: 2px solid var(--main-border-color);  
     font-size: 20px;
-    float: left;
+    left: 25px;
 }
 .header__link-button {
+    position: absolute;
     height: 40px;
     width: 40px;
     background-color: var(--main-bg-color);  
     border: 2px solid var(--main-border-color);  ;
     font-size: 20px;
-    float: right;
+    right: 25px;
 }
 .arrow_left {
     border: solid var(--arrow-color);
@@ -265,7 +267,6 @@ body.lock {
     display: inline-block;
     padding: 4px;
     transform: rotate(135deg);
-    -webkit-transform: rotate(135deg);
 }
 .arrow_right {
     border: solid var(--arrow-color);
@@ -273,12 +274,14 @@ body.lock {
     display: inline-block;
     padding: 4px;
     transform: rotate(-45deg);
-    -webkit-transform: rotate(-45deg);
 }
 .content {
     padding: 70px 0 0;
 }
 @media (min-width: 768px){
+    .header:before {
+        z-index: -2;
+    }
     .header__menu {
         position: relative;
         padding: 0;
@@ -291,7 +294,6 @@ body.lock {
         display: flex;  
         padding: 0 5px 0 0;
         position: relative;
-        z-index: 2;
     }
     .header__list li {
         list-style: none;
